# ee_trd

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_TRANSFORMATION_REPORT.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  ORGANIZATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PYPI_UPLOAD_INSTRUCTIONS.md  README.md  RELEASE_SUMMARY.md  REPOSITORY_STRUCTURE_BACKUP.json  STATUS_REPORT.md  TRANSFORMATION_LOG.md  TRANSFORMATION_SUMMARY.md  configuration_management_recommendations.md  environment.yml  manuscript_v8_20251023_no_uc_clean.md.bak  orchestrate_clean_transform.py  pyproject.toml  pytest.ini  requirements.txt  run_analysis.py  setup.cfg  setup.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  parity-check.yml  publish.yml  test.yml
analysis/adverse_events/: example_adverse_events_analysis.ipynb
analysis/bia/: example_bia_analysis.ipynb
analysis/capacity_constraints/: example_capacity_constraints_analysis.ipynb
analysis/cca/: example_cca_analysis.ipynb
analysis/cea/: example_cea_analysis.ipynb
analysis/dcea/: example_dcea_analysis.ipynb
analysis/external_validation/: example_external_validation_analysis.ipynb
analysis/headroom/: example_headroom_analysis.ipynb
analysis/implementation_costs/: example_implementation_costs_analysis.ipynb
analysis/markov/: example_markov_model_analysis.ipynb
analysis/mcda/: example_mcda_analysis.ipynb
analysis/policy_realism/: example_policy_realism_analysis.ipynb
analysis/roa/: example_roa_analysis.ipynb
analysis/roi/: example_roi_analysis.ipynb
analysis/scenario/: example_scenario_analysis.ipynb
analysis/subgroup/: example_subgroup_analysis.ipynb
analysis/time_to_benefit/: example_time_to_benefit_analysis.ipynb
analysis/vbp/: example_vbp_analysis.ipynb
analysis/voi/: example_voi_analysis.ipynb
archive/: ARCHIVE_SUMMARY.md  README.md
archive/v1_legacy/: README.md
archive/v2_enhanced/: README.md  v2_completion_checklist.md
archive/v3_nextgen/: README.md  V3_COMPLETION_REPORT.md  V3_CORRECTION_COMPLETE.md  v3_completion_checklist.md
config/: README.md  analysis_configurations.yaml  analysis_v2_defaults.yml  bia.yaml  default_analysis_config.yaml  journal_standards.yml  logging_defaults.yml  strategies.yml  v4_analysis_defaults.yml  v4_ect_focused_analysis_defaults.yml  v4_ect_focused_strategies.yml  v4_strategies.yml
data/: psa.csv.bak  psa_extended.csv.bak  psa_extended_hs.csv.bak  psa_extended_with_c.csv.bak  psa_with_params.csv.bak
data/documentation/: assumption_register.md  (+2 more)
data_schemas/: cost_inputs_au.csv  dcea_groups.csv  dcea_groups_evidence_based.csv  dcea_weights.csv
development/: Makefile  Snakefile  utils.py
docs/: ARCHIVING_SUMMARY.md  CEAC_FIX_REPORT.md  GIT_COMMIT_SUMMARY.md  MANUSCRIPT_UPDATE_PLAN.md  README.md  V3_CRITICAL_ANALYSIS_REPORT.md  V4_FIGURES_STATUS.md  V4_OUTPUTS_GENERATED.md  V4_PROGRESS_SUMMARY.md  V4_PROJECT_COMPLETION.md  Version_Reconciliation_Summary.md  analyses.md  api.md  assumptions.md  cleanup_report.txt  equity_evidence_base.md  evpi_table.md  evppi_table.md  evsi_analysis.md  index.md  installation.md  manuscript_v5_v6_diff.md  model_diagrams.md  phase7_completion_summary.md  phase7_visualization_summary.md  psa_summary_table.md  references.md  report.md  scenario_analysis_table.md  search_log_PRISMA.csv  search_log_PRISMA.md  subgroup_analysis_table.md  two_way_dsa_table.md  v3_enhancement_plan.md  v3_enhancement_summary.md  v3_implementation_checklist.md  v3_implementation_report.md  v3_pipeline_validation_report.md  v3_technical_analysis.md  v4_value_mapping.json  (+4 more)
reports/: FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  GITHUB_PUBLICATION_GUIDE.md  GITHUB_SETUP_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  STATUS_REPORT.md
scripts/: __init__.py  cli.py  orchestrate_clean_transform.py
tests/: conftest.py  test_basic_functionality.py  test_core_functionality.py  test_quality_assurance.py
(+444 files in other folders)
